--- a/Web/Resources/Pages/Candidate/Shoreside/SimilarList.fr.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/SimilarList.fr.resx
@@ -126,4 +126,7 @@
   <data name="POSITION DETAILS" xml:space="preserve">
     <value>DÉTAILS DU POSTE</value>
   </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
+  </data>
 </root>
