--- a/Web/Resources/Pages/Candidate/Seagoing/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Index.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
+  </data>
   <data name="Q1" xml:space="preserve">
     <value>Choisissez parmi les deux positions ci-dessous</value>
   </data>
