--- a/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
@@ -129,4 +129,7 @@
   <data name="NoResult" xml:space="preserve">
     <value>Aucun résultat correspondant trouvé</value>
   </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
+  </data>
 </root>
