--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.fr.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Deck" xml:space="preserve">
+    <value>Pont</value>
+  </data>
+  <data name="Engineering" xml:space="preserve">
+    <value>Ingénierie</value>
+  </data>
+  <data name="Logistics" xml:space="preserve">
+    <value>Logistique</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
