--- a/Web/Resources/Pages/Candidate/Seagoing/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Index.fr.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Crew" xml:space="preserve">
+    <value>Équipage</value>
+  </data>
+  <data name="Officer" xml:space="preserve">
+    <value>Officier</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
