--- a/Web/Resources/Pages/Student/HighSchool/AllPositions.resx
+++ b/Web/Resources/Pages/Student/HighSchool/AllPositions.resx
@@ -129,6 +129,18 @@
   <data name="link" xml:space="preserve">
     <value>https://www.ccg-gcc.gc.ca/college/index-eng.html</value>
   </data>
+  <data name="PhotoAdmin" xml:space="preserve">
+    <value>Photo of administrative personnel working at her desk</value>
+  </data>
+  <data name="PhotoCollege" xml:space="preserve">
+    <value>Photo of the Canadian Coast Guard College</value>
+  </data>
+  <data name="PhotoComputer" xml:space="preserve">
+    <value>Photo of computer systems</value>
+  </data>
+  <data name="PhotoTrades" xml:space="preserve">
+    <value>Photo of a welder at work</value>
+  </data>
   <data name="Q1" xml:space="preserve">
     <value>Choose an area that you are interested in?</value>
   </data>
