--- a/Web/Resources/Pages/Candidate/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Index.fr.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PhotoSeagoing" xml:space="preserve">
+    <value>Photo du navire Cape Kuper</value>
+  </data>
+  <data name="PhotoShoreside" xml:space="preserve">
+    <value>Photo d'un membre de la Garde côtière canadienne debout devant un phare</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
