--- a/Web/Resources/Pages/Candidate/Index.resx
+++ b/Web/Resources/Pages/Candidate/Index.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PhotoSeagoing" xml:space="preserve">
+    <value>Photo of the vessel Cape Kuper</value>
+  </data>
+  <data name="PhotoShoreside" xml:space="preserve">
+    <value>Photo of a Canadian Coast Guard member standing in front of a lighthouse</value>
+  </data>
   <data name="Question1" xml:space="preserve">
     <value>Which area would you like to explore?</value>
   </data>
