--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.fr.resx
@@ -126,6 +126,15 @@
   <data name="Logistics" xml:space="preserve">
     <value>Logistique</value>
   </data>
+  <data name="PhotoDeck" xml:space="preserve">
+    <value>Photo de membres d'équipage de la Garde côtière canadienne travaillant sur le pont d'un navire</value>
+  </data>
+  <data name="PhotoEngineer" xml:space="preserve">
+    <value>Photo d'un membre de la Garde côtière canadienne vérifiant l'huile</value>
+  </data>
+  <data name="PhotoLogistics" xml:space="preserve">
+    <value>Photo d'un cuisinier de la Garde côtière canadienne servant le déjeuner</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
