--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PhotoDeck" xml:space="preserve">
+    <value>Photo of Canadian Coast Guard crew members working on the deck of a vessel</value>
+  </data>
+  <data name="PhotoEngineer" xml:space="preserve">
+    <value>Photo of a Canadian Coast Guard member checking the oil</value>
+  </data>
+  <data name="PhotoLogistics" xml:space="preserve">
+    <value>Photo of a Canadian Coast Guard cook serving lunch</value>
+  </data>
   <data name="Q1" xml:space="preserve">
     <value>Please select your preferred field of employment</value>
   </data>
