--- a/Web/Resources/Pages/Candidate/Seagoing/Index.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Index.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Crew" xml:space="preserve">
+    <value>Crew</value>
+  </data>
+  <data name="Officer" xml:space="preserve">
+    <value>Officer</value>
+  </data>
+  <data name="PhotoCrew" xml:space="preserve">
+    <value>Photo of Canadian Coast Guard crew members working on the deck of a vessel</value>
+  </data>
+  <data name="PhotoOfficer" xml:space="preserve">
+    <value>Photo of a Canadian Coast Guard Officer</value>
+  </data>
   <data name="Q1" xml:space="preserve">
     <value>Choose from the two positions below</value>
   </data>
