--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -126,6 +126,15 @@
   <data name="IndexTitle" xml:space="preserve">
     <value>Outil de compétence professionnelle</value>
   </data>
+  <data name="PhotoExternal" xml:space="preserve">
+    <value>Photo d'un groupe d'individus</value>
+  </data>
+  <data name="PhotoMember" xml:space="preserve">
+    <value>Photo d'un membre de la Garde côtière canadienne</value>
+  </data>
+  <data name="PhotoStudents" xml:space="preserve">
+    <value>Photo d'étudiants diplômés</value>
+  </data>
   <data name="Question1" xml:space="preserve">
     <value>Pour commencer, dites-nous qui vous êtes</value>
   </data>
