--- a/Web/Resources/Pages/CCGMember/CurrentLevel.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentLevel.resx
@@ -126,6 +126,9 @@
   <data name="Next" xml:space="preserve">
     <value>Next</value>
   </data>
+  <data name="Photo" xml:space="preserve">
+    <value>Photo of various careers within the Canadian Coast Guard</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
   </data>
