--- a/Web/Resources/Pages/CCGMember/CurrentPosition.fr.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentPosition.fr.resx
@@ -126,6 +126,9 @@
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
   </data>
+  <data name="Photo" xml:space="preserve">
+    <value>Photo de diverses carrières au sein de la Garde côtière canadienne</value>
+  </data>
   <data name="Position" xml:space="preserve">
     <value>Position</value>
   </data>
