--- a/Web/Resources/Pages/CCGMember/SearchType.fr.resx
+++ b/Web/Resources/Pages/CCGMember/SearchType.fr.resx
@@ -126,6 +126,12 @@
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
   </data>
+  <data name="PhotoCompare" xml:space="preserve">
+    <value>Photo de deux postes au sein de la Garde côtière canadienne</value>
+  </data>
+  <data name="PhotoSimilar" xml:space="preserve">
+    <value>Photo de quatre postes au sein de la Garde côtière canadienne</value>
+  </data>
   <data name="Question1" xml:space="preserve">
     <value>Comment souhaitez-vous effectuer votre recherche?</value>
   </data>
