--- a/Web/Resources/Pages/Shared/_ThemeGcwu.fr.resx
+++ b/Web/Resources/Pages/Shared/_ThemeGcwu.fr.resx
@@ -147,6 +147,9 @@
   <data name="Symbol of the Government of Canada" xml:space="preserve">
     <value>Symbole du gouvernement du Canada</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Outil de compétence professionnelle</value>
+  </data>
   <data name="You are here:" xml:space="preserve">
     <value>Vous êtes ici :</value>
   </data>
