--- a/Web/Resources/Pages/Shared/_ThemeGcwu.resx
+++ b/Web/Resources/Pages/Shared/_ThemeGcwu.resx
@@ -147,6 +147,9 @@
   <data name="Symbol of the Government of Canada" xml:space="preserve">
     <value>Symbol of the Government of Canada</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Career Competency Tool</value>
+  </data>
   <data name="You are here:" xml:space="preserve">
     <value>You are here:</value>
   </data>
