--- a/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add Element" xml:space="preserve">
-    <value>Ajouter un élément</value>
+  <data name="Add Competency" xml:space="preserve">
+    <value>Ajouter une compétence</value>
   </data>
   <data name="ADDED ELEMENTS" xml:space="preserve">
     <value>ÉLÉMENTS AJOUTÉS</value>
