--- a/Web/Resources/Pages/CCGMember/Similar/SimilarList.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarList.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Current Position" xml:space="preserve">
+    <value>Position actuelle</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
   </data>
