External Canadidates removed print icon and layout & resource updates

--- a/Web/Resources/Pages/Candidate/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Index.fr.resx
@@ -135,4 +135,7 @@
   <data name="Shoreside" xml:space="preserve">
     <value>Positions côté rivage</value>
   </data>
+  <data name="title" xml:space="preserve">
+    <value>Candidat externe</value>
+  </data>
 </root>
