--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Index.resx
@@ -129,4 +129,7 @@
   <data name="Q1" xml:space="preserve">
     <value>Please select your preferred field of employment</value>
   </data>
+  <data name="title" xml:space="preserve">
+    <value>External Canadidates - Seagoing - Crew</value>
+  </data>
 </root>
