--- a/Web/Resources/Pages/Candidate/Seagoing/Index.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Index.resx
@@ -132,4 +132,7 @@
   <data name="Q1" xml:space="preserve">
     <value>Choose from the two positions below</value>
   </data>
+  <data name="title" xml:space="preserve">
+    <value>External Canadidates - Seagoing</value>
+  </data>
 </root>
