--- a/Web/Resources/Pages/Candidate/Seagoing/Officer/Index.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Officer/Index.resx
@@ -141,4 +141,7 @@
   <data name="Text" xml:space="preserve">
     <value>Seagoing navigation and engineering officers have additional requirements associated with a matrix of certification (i.e. completed training in a recognized institution), sea time (i.e. time logged at sea), and ship class (i.e. vessel size, power, type).</value>
   </data>
+  <data name="title" xml:space="preserve">
+    <value>External Canadidates - Seagoing - Officer</value>
+  </data>
 </root>
