--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Engineering/PositionList.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Engineering/PositionList.fr.resx
@@ -138,4 +138,10 @@
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
+  <data name="save" xml:space="preserve">
+    <value>Enregistrer ou imprimer ce document</value>
+  </data>
+  <data name="title" xml:space="preserve">
+    <value>Candidats externes - En mer - Équipage - Postes d'ingénieur</value>
+  </data>
 </root>
