--- a/Web/Resources/Pages/Candidate/Shoreside/SimilarList.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/SimilarList.resx
@@ -117,4 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="save" xml:space="preserve">
+    <value>Save or print this document</value>
+  </data>
+  <data name="title" xml:space="preserve">
+    <value>Similar Position List</value>
+  </data>
 </root>
